package main;

public class DuplicadorDePuntajeDesactivado implements DuplicadorDePuntaje{
    public DuplicadorDePuntajeDesactivado(){}
    public int modificarPuntaje(int unPuntaje){
        return unPuntaje;
    }

}
