@startuml
'https://plantuml.com/class-diagram'

hide circle
skinparam classAttributeIconSize 0
skinparam monochrome true
class Jugador {

    -nombre
    +{static}Jugador(nombre)
    +responder(Pregunta pregunta)
    -elegirRespuesta(ArrayList<Respuesta> respuestas)
    +modificarPuntaje(puntaje)
    +activarDuplicadorDePuntaje()
}


abstract class Pregunta {
    +obtenerRespuestasPosibles(): Array<Respuesta>
    -obtenerRespuestaCorrecta(): Array<Respuesta>
    + puntuar(ArrayList<Respuesta> respuestas)
}

interface MultiplicadorPorDos {
    - usosDisponibles
    + modificarPuntaje(int: puntaje):
    + activar()
}


interface DuplicadorDePuntaje {
    modificarPuntaje(int: puntaje):
}

class DuplicadorDePuntajeActivado implements DuplicadorDePuntaje {
    modificarPuntaje(int: puntaje):
}

class DuplicadorDePuntajeDesactivado implements DuplicadorDePuntaje {
    modificarPuntaje(int: puntaje):
}
class VerdaderoFalsoClasico {

}

class VerdaderoFalsoPenalidad {

}

class MultipleChoiceClasico {

}

class MultipleChoiceParcial {

}

class MultipleChoicePenalidad {

}

class OrderedChoice {

}

class GroupChoice {

}

interface PenalizacionPregunta {

}

interface Respuesta{
    +actualizarPuntaje()
    +esCorrecta(): Boolean
}

class RespuestaCorrecta implements Respuesta{
}

class MultipleChoiceCorrecta extends RespuestaCorrecta{

}

class VerdaderoFalsoCorrecta extends RespuestaCorrecta{

}



class RespuestaIncorrecta implements Respuesta{
}

class MultipleChoiceIncorrecta extends RespuestaIncorrecta{

}

class VerdaderFalsoIncorrecta extends RespuestaIncorrecta{

}


MultiplicadorPorDos *--> DuplicadorDePuntaje


Pregunta *-"*"Respuesta

Pregunta <|.. VerdaderoFalsoClasico
Pregunta <|.. VerdaderoFalsoPenalidad
Pregunta <|.. MultipleChoiceClasico
Pregunta <|.. MultipleChoiceParcial
Pregunta <|.. MultipleChoicePenalidad
Pregunta <|.. OrderedChoice
Pregunta <|.. GroupChoice

Jugador -> MultiplicadorPorDos
Respuesta ->"*" Jugador

VerdaderoFalsoPenalidad .. PenalizacionPregunta
MultipleChoicePenalidad.. PenalizacionPregunta

@enduml